--- a/frontend/kiosk/package.json
+++ b/frontend/kiosk/package.json
@@ -18,9 +18,11 @@
     "bootstrap": "^5.2.3",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "secure-ls": "^1.2.6",
     "vue": "^2.7.14",
     "vue-router": "^3.5.1",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
