--- a/frontend/kiosk/package.json
+++ b/frontend/kiosk/package.json
@@ -14,12 +14,15 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/vue-fontawesome": "^2.0.9",
+    "ag-grid-community": "^28.2.1",
+    "ag-grid-vue": "^28.2.1",
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
     "secure-ls": "^1.2.6",
     "vue": "^2.7.14",
+    "vue-property-decorator": "^8.5.1",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2",
     "vuex-persistedstate": "^4.1.0"
