--- a/frontend/kiosk/package.json
+++ b/frontend/kiosk/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.2.3",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "jwt-decode": "^3.1.2",
     "secure-ls": "^1.2.6",
     "vue": "^2.7.14",
     "vue-property-decorator": "^8.5.1",
