--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,6 +1,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/python,windows,macos,visualstudiocode,django
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,windows,macos,visualstudiocode,django
 
+### MySQL ###
+my_settings.py
+
 ### Django ###
 *.log
 *.pot
