--- a/frontend/kiosk/package.json
+++ b/frontend/kiosk/package.json
@@ -19,6 +19,7 @@
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
     "jwt-decode": "^3.1.2",
+    "print-js": "^1.6.0",
     "secure-ls": "^1.2.6",
     "vue": "^2.7.14",
     "vue-property-decorator": "^8.5.1",
