--- a/frontend/kiosk/package.json
+++ b/frontend/kiosk/package.json
@@ -26,7 +26,8 @@
     "vue-property-decorator": "^8.5.1",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2",
-    "vuex-persistedstate": "^4.1.0"
+    "vuex-persistedstate": "^4.1.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
