--- a/frontend/kiosk/package.json
+++ b/frontend/kiosk/package.json
@@ -59,5 +59,10 @@
     "> 1%",
     "last 2 versions",
     "not dead"
+  ],
+  "eslint.workingDirectories": [
+    {
+      "mode": "auto"
+    }
   ]
 }
